--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,13 @@
             <p>Game data like active matches and builds</p>
         </div>
     </a>
+    <a href="https://analytics.deadlock-api.com/" title="Deadlock Analytics API" class="feature">
+        <div>
+            <img src="assets/query_stats.svg" alt="Analytics Icon" width="80" height="80">
+            <h2>Deadlock Analytics API</h2>
+            <p>Analytics & Statistics, including match, player, hero and item statistics.</p>
+        </div>
+    </a>
 </main>
 </body>
 </html>
