--- a/public/index.html
+++ b/public/index.html
@@ -17,21 +17,21 @@
 <body>
 <header><h1>Deadlock API</h1></header>
 <main>
-    <a href="https://assets.deadlock-api.com/" title="Deadlock Assets API" class="feature">
+    <a href="https://assets.deadlock-api.com/" title="Deadlock Assets API" class="feature" target="_blank">
         <div>
             <img src="assets/gallery.svg" alt="Gallery Icon" width="80" height="80">
             <h2>Deadlock Assets API</h2>
             <p>Images & Stats of heroes, items, weapons, abilities, and much more.</p>
         </div>
     </a>
-    <a href="https://data.deadlock-api.com/" title="Deadlock Data API" class="feature">
+    <a href="https://data.deadlock-api.com/" title="Deadlock Data API" class="feature" target="_blank">
         <div>
             <img src="assets/database.svg" alt="Database Icon" width="80" height="80">
             <h2>Deadlock Data API</h2>
             <p>Game data like active matches and builds</p>
         </div>
     </a>
-    <a href="https://analytics.deadlock-api.com/" title="Deadlock Analytics API" class="feature">
+    <a href="https://analytics.deadlock-api.com/" title="Deadlock Analytics API" class="feature" target="_blank">
         <div>
             <img src="assets/query_stats.svg" alt="Analytics Icon" width="80" height="80">
             <h2>Deadlock Analytics API</h2>
@@ -39,5 +39,24 @@
         </div>
     </a>
 </main>
+<footer>
+    <p id="policy">
+        deadlock-api.com is not endorsed by Valve and does not reflect the views or opinions of Valve or anyone
+        officially involved in producing or managing Valve properties. Valve and all associated properties are
+        trademarks or registered trademarks of Valve Corporation
+    </p>
+    <a href="https://www.patreon.com/user?u=68961896" title="Patreon" target="_blank">
+        <button>
+            <img src="assets/patreon.svg" alt="Patreon Icon" width="15" height="15">
+            Support via Patreon
+        </button>
+    </a>
+    <a href="https://discord.gg/rs23RCNqjt" title="Discord" target="_blank">
+        <button>
+            <img src="assets/discord.svg" alt="Discord Icon" width="15" height="15">
+            Join Developer Discord
+        </button>
+    </a>
+</footer>
 </body>
 </html>
