Do not open new tab on docs link

--- a/public/index.html
+++ b/public/index.html
@@ -17,21 +17,21 @@
 <body>
 <header><h1>Deadlock API</h1></header>
 <main>
-    <a href="https://assets.deadlock-api.com/" title="Deadlock Assets API" class="feature" target="_blank">
+    <a href="https://assets.deadlock-api.com/" title="Deadlock Assets API" class="feature">
         <div>
             <img src="assets/gallery.svg" alt="Gallery Icon" width="80" height="80">
             <h2>Deadlock Assets API</h2>
             <p>Images & Stats of heroes, items, weapons, abilities, and much more.</p>
         </div>
     </a>
-    <a href="https://data.deadlock-api.com/" title="Deadlock Data API" class="feature" target="_blank">
+    <a href="https://data.deadlock-api.com/" title="Deadlock Data API" class="feature">
         <div>
             <img src="assets/database.svg" alt="Database Icon" width="80" height="80">
             <h2>Deadlock Data API</h2>
             <p>Game data like active matches and builds</p>
         </div>
     </a>
-    <a href="https://analytics.deadlock-api.com/" title="Deadlock Analytics API" class="feature" target="_blank">
+    <a href="https://analytics.deadlock-api.com/" title="Deadlock Analytics API" class="feature">
         <div>
             <img src="assets/query_stats.svg" alt="Analytics Icon" width="80" height="80">
             <h2>Deadlock Analytics API</h2>
