Add Status Link

--- a/public/index.html
+++ b/public/index.html
@@ -47,14 +47,20 @@
     </p>
     <a href="https://www.patreon.com/user?u=68961896" title="Patreon" target="_blank">
         <button>
-            <img src="assets/patreon.svg" alt="Patreon Icon" width="15" height="15">
+            <img src="assets/patreon.svg" alt="Patreon Icon" width="25" height="25">
             Support via Patreon
         </button>
     </a>
     <a href="https://discord.gg/rs23RCNqjt" title="Discord" target="_blank">
         <button>
-            <img src="assets/discord.svg" alt="Discord Icon" width="15" height="15">
+            <img src="assets/discord.svg" alt="Discord Icon" width="25" height="25">
             Join Developer Discord
+        </button>
+    </a>
+    <a href="https://stats.uptimerobot.com/V1HIfGQT77" title="Status" target="_blank">
+        <button>
+            <img src="assets/status.svg" alt="Patreon Icon" width="25" height="25">
+            Status
         </button>
     </a>
 </footer>
