--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,9 @@
     <meta name="Cache-Control" content="public, max-age=86400">
     <meta name="robots" content="index, follow">
     <meta name="theme-color" content="#fa4454">
+    <link rel="icon" type="image/ico" href="favicon.ico" />
+    <link rel="icon" type="image/webp" href="favicon.webp" />
+    <link rel="icon" type="image/png" href="favicon.png" />
 </head>
 <body>
 <header><h1>Deadlock API</h1></header>
