Add Link to Data and Analytics GitHub Repo

--- a/public/index.html
+++ b/public/index.html
@@ -64,6 +64,12 @@
                     Swagger Docs
                 </button>
             </a>
+            <a href="https://github.com/deadlock-api/deadlock-api-data" title="Github" target="_blank">
+                <button>
+                    <img src="assets/github.svg" alt="GitHub Icon" width="25" height="25">
+                    GitHub Repository
+                </button>
+            </a>
             <a href="https://discord.gg/XMF9Xrgfqu" title="Request API-Key" target="_blank">
                 <button>
                     <img src="assets/key.svg" alt="Key Icon" width="25" height="25">
@@ -90,6 +96,12 @@
                 <button>
                     <img src="assets/swagger.svg" alt="Key Icon" width="25" height="25">
                     Swagger Docs
+                </button>
+            </a>
+            <a href="https://github.com/deadlock-api/deadlock-api-analytics" title="Github" target="_blank">
+                <button>
+                    <img src="assets/github.svg" alt="GitHub Icon" width="25" height="25">
+                    GitHub Repository
                 </button>
             </a>
             <a href="https://discord.gg/XMF9Xrgfqu" title="Request API-Key" target="_blank">
