Remove Developer Discord Link

--- a/public/index.html
+++ b/public/index.html
@@ -191,13 +191,7 @@
         <a href="https://discord.gg/XMF9Xrgfqu" title="Discord" target="_blank">
             <button>
                 <img src="assets/discord.svg" alt="Discord Icon" width="25" height="25" class="no-invert">
-                API
-            </button>
-        </a>
-        <a href="https://discord.gg/rs23RCNqjt" title="Discord" target="_blank">
-            <button>
-                <img src="assets/discord.svg" alt="Discord Icon" width="25" height="25" class="no-invert">
-                Developer Community
+                Discord
             </button>
         </a>
         <a href="https://stats.uptimerobot.com/V1HIfGQT77" title="Status" target="_blank">
