Fix button title

--- a/public/index.html
+++ b/public/index.html
@@ -159,9 +159,9 @@
                     Database Playground
                 </button>
             </a>
-            <a href="https://discord.gg/XMF9Xrgfqu" title="Request Data API-Key" target="_blank">
+            <a href="https://discord.gg/XMF9Xrgfqu" title="Feature Requests" target="_blank">
                 <button>
-                    <img src="assets/playlist_add.svg" alt="Key Icon" width="25" height="25">
+                    <img src="assets/playlist_add.svg" alt="Add Icon" width="25" height="25">
                     Feature Requests
                 </button>
             </a>
