Add Database Snapshots Link to Frontpage

--- a/public/index.html
+++ b/public/index.html
@@ -128,16 +128,17 @@
         <br>
         <div>
             <a href="https://colab.research.google.com/drive/1-EuP_EoE2-G18puKioeDJJklL9N20YZR?usp=sharing"
-               title="Deadlock Data Science API" target="_blank">
+               title="Deadlock Data Science API - Colab" target="_blank">
                 <button>
-                    <img src="assets/colab.svg" alt="Key Icon" width="25" height="25" class="no-invert">
+                    <img src="assets/colab.svg" alt="Colab Icon" width="25" height="25" class="no-invert">
                     Colab Active Matches - Data
                 </button>
             </a>
-            <a href="https://discord.gg/XMF9Xrgfqu" title="Request Data API-Key" target="_blank">
+            <a href="https://minio.deadlock-api.com/browser/db-snapshot/public%2F"
+               title="Deadlock Data Science API - Data" target="_blank">
                 <button>
-                    <img src="assets/key.svg" alt="Key Icon" width="25" height="25">
-                    Request an Data API-Key
+                    <img src="assets/database.svg" alt="Database Icon" width="25" height="25">
+                    Database Snapshots
                 </button>
             </a>
         </div>
