--- a/public/index.html
+++ b/public/index.html
@@ -131,7 +131,7 @@
                title="Deadlock Data Science API - Colab" target="_blank">
                 <button>
                     <img src="assets/colab.svg" alt="Colab Icon" width="25" height="25" class="no-invert">
-                    Colab Active Matches - Data
+                    Google Colab Notebook
                 </button>
             </a>
             <a href="https://minio.deadlock-api.com/browser/db-snapshot/public%2F"
