Add Sponsor DeadlockRank

--- a/public/index.html
+++ b/public/index.html
@@ -175,6 +175,22 @@
             </p>
         </div>
     </div>
+    <div>
+        <div class="tooltip">
+            <h2>Sponsored by <img src="assets/info.svg" width="20" height="20" alt="Get a Sponsor" class="info-icon">
+            </h2>
+            <span class="tooltip-info">
+                Contact us on
+                <a href="https://discord.gg/XMF9Xrgfqu" title="Discord" target="_blank">discord</a>
+                if you want to become a sponsor.
+            </span>
+        </div>
+
+        <br>
+        <a href="https://deadlockrank.com/" title="Deadlock Rank" target="_blank" class="feature sponsor">
+            <img src="assets/sponsors/deadlockrank.png" alt="https://deadlockrank.com">
+        </a>
+    </div>
 </main>
 <footer>
     <p id="policy">
