--- a/public/index.html
+++ b/public/index.html
@@ -190,6 +190,9 @@
         <a href="https://deadlockrank.com/" title="Deadlock Rank" target="_blank" class="feature sponsor">
             <img src="assets/sponsors/deadlockrank.png" alt="https://deadlockrank.com">
         </a>
+        <a href="https://deadlock.blast.tv/" title="Blast.TV" target="_blank" class="feature sponsor">
+            <img src="assets/sponsors/blast.svg" alt="https://deadlock.blast.tv/">
+        </a>
     </div>
 </main>
 <footer>
