Add Deadlock Streamkit feature
Adds a new section to the website promoting the Deadlock Streamkit.  Includes links to the Streamkit, Chat Command Builder, and Feature Requests.  Adds new SVG assets for stream and chat icons.

--- a/public/index.html
+++ b/public/index.html
@@ -176,6 +176,30 @@
         </div>
     </div>
     <div>
+        <a href="https://streamkit.deadlock-api.com/" title="Deadlock Streamkit" class="feature">
+            <div>
+                <img src="assets/stream.svg" alt="Stream Icon" width="80" height="80">
+                <h2>Deadlock Streamkit</h2>
+                <p>Streamkit for streamers to display live data on their stream.</p>
+            </div>
+        </a>
+        <br>
+        <div>
+            <a href="https://streamkit.deadlock-api.com/" title="Feature Requests" target="_blank">
+                <button>
+                    <img src="assets/chat.svg" alt="Open" width="25" height="25">
+                    Chat Command Builder
+                </button>
+            </a>
+            <a href="https://discord.gg/XMF9Xrgfqu" title="Feature Requests" target="_blank">
+                <button>
+                    <img src="assets/playlist_add.svg" alt="Add Icon" width="25" height="25">
+                    Feature Requests
+                </button>
+            </a>
+        </div>
+    </div>
+    <div>
         <div class="tooltip">
             <h2>Sponsored by <img src="assets/info.svg" width="20" height="20" alt="Get a Sponsor" class="info-icon">
             </h2>
